--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Join Our List</title>
 </head>
 <body>
-  <h1>Join the Movement</h1>
+  <h1>Join Our Waitlist</h1>
   <form id="signup-form">
     <input type="email" name="email" placeholder="Your email" required />
     <button type="submit">Sign Up</button>
