--- a/index.html
+++ b/index.html
@@ -1,13 +1,93 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Join Our List</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MSME Skin</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #fdf6e9;
+      color: #5c3a2e;
+      font-family: 'Playfair Display', serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      text-align: center;
+    }
+
+    img.logo {
+      max-width: 200px;
+      margin-bottom: 30px;
+    }
+
+    h1 {
+      font-size: 2rem;
+      font-weight: 700;
+      margin-bottom: 10px;
+    }
+
+    p.subtitle {
+      font-size: 1.1rem;
+      margin-bottom: 30px;
+      max-width: 600px;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      width: 100%;
+      max-width: 300px;
+    }
+
+    input[type="text"],
+    input[type="email"] {
+      padding: 12px;
+      border: 1px solid #5c3a2e;
+      font-size: 1rem;
+      border-radius: 3px;
+    }
+
+    button {
+      padding: 12px;
+      background-color: #5c3a2e;
+      color: white;
+      border: none;
+      border-radius: 3px;
+      font-size: 1rem;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #40281e;
+    }
+
+    #message {
+      margin-top: 15px;
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
 <body>
-  <h1>Join Our Waitlist</h1>
+
+  <!-- Replace 'logo.png' with your actual logo file name -->
+  <img src="logo.png" alt="MSME Skin Logo" class="logo" />
+
+  <h1>MSME Skin is coming soon.</h1>
+  <p class="subtitle">
+    Be the first to know when we launch – get yourself on our list for exclusive early bird discounts
+  </p>
+
   <form id="signup-form">
-    <input type="email" name="email" placeholder="Your email" required />
-    <button type="submit">Sign Up</button>
+    <input type="text" name="name" placeholder="Name" required />
+    <input type="email" name="email" placeholder="Email" required />
+    <button type="submit">I’m in!</button>
   </form>
 
   <p id="message"></p>
@@ -16,12 +96,13 @@
     const form = document.getElementById("signup-form");
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
+      const name = form.name.value;
       const email = form.email.value;
 
       const res = await fetch("https://your-api-url.com/signup", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ email }),
+        body: JSON.stringify({ name, email }),
       });
 
       const data = await res.json();
