--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
 </head>
 <body>
 
-  <!-- Replace 'logo.png' with your actual logo file name -->
-  <img src="logo.png" alt="MSME Skin Logo" class="logo" />
+  <img src="logo.jpg" alt="MSME Skin Logo" class="logo" />
 
   <h1>MSME Skin is coming soon.</h1>
   <p class="subtitle">
