--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #fdf6e9;
+      background-color: #fffbefff;
       color: #5c3a2e;
       font-family: 'Playfair Display', serif;
       display: flex;
