--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       padding: 0;
       background-color: #fffbefff;
       color: #5c3a2e;
-      font-family: 'Playfair Display', serif;
+      font-family: 'Nunito', serif;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -21,12 +21,12 @@
     }
 
     img.logo {
-      max-width: 200px;
+      max-width: 250px;
       margin-bottom: 30px;
     }
 
     h1 {
-      font-size: 2rem;
+      font-size: 1.8rem;
       font-weight: 700;
       margin-bottom: 10px;
     }
@@ -80,7 +80,7 @@
 
   <h1>MSME Skin is coming soon.</h1>
   <p class="subtitle">
-    Be the first to know when we launch – get yourself on our list for exclusive early bird discounts
+    Be the first to know when we launch – get yourself on our list for our limited first drop!
   </p>
 
   <form id="signup-form">
