--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MSME Skin</title>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Calibri:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     body {
       margin: 0;
       padding: 0;
       background-color: #fffbefff;
       color: #5c3a2e;
-      font-family: 'Nunito', serif;
+      font-family: 'Calibri', serif;
       display: flex;
       flex-direction: column;
       align-items: center;
