--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       const name = form.name.value;
       const email = form.email.value;
 
-      const res = await fetch("https://your-api-url.com/signup", {
+      const res = await fetch("https://msme-signup-api-1.onrender.com/signup", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ name, email }),
