--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
   <p id="message"></p>
 
- <script>
+<script>
   const form = document.getElementById("signup-form");
   const message = document.getElementById("message");
 
@@ -102,21 +102,17 @@
     const email = form.email.value;
 
     try {
-      const res = await fetch("https://msme-signup-api.onrender.com/signup", {
+      const res = await fetch("https://script.google.com/macros/s/AKfycbyadDkJq3TVvfPkBXs9Ex7k9wDNuSDCIgu-LiyPaQ9fFk1PWsQnSqbd2Kv4SYoHmji3/exec", {
         method: "POST",
-        headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ name, email }),
+        headers: { "Content-Type": "application/json" }
       });
 
       const data = await res.json();
-
-      // Hide the form and show the message
       form.style.display = "none";
       message.innerText = data.message;
-      message.style.fontWeight = "600";
-      message.style.fontSize = "1.2rem";
     } catch (err) {
-      message.innerText = "Something went wrong. Please try again later.";
+      message.innerText = "Something went wrong. Please try again.";
     }
   });
 </script>
